--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -105,12 +105,15 @@
   PB_ENG_WUP_Women_Workers:0 "Women in the Workplace"
   PB_ENG_WUP_Women_Workers_desc:0 "It is rare for a Woman to work in a factory or any kind of respectable occupation in this country. With Britain losing it's global market share in the world economy due to the loss of output compared to other nations we cannot allow ourselves to keep what seems to be half of our workshop at home. To combat this we shall start implementing social reform and laws to ease the fairer sex into the labour market."
   PB_ENG_WUP_National_Industrial_Plan:0 "The National Industrial Plan"
+  PB_ENG_WUP_National_Industrial_Plan_desc:0 "With many parts of the country reeling from the recent recession, we shall implement a government funded and implemented plan to bring new job opportunities in the country whilst also alleviating the poverty situation with new government funded schemes to finally try sort out the industrial mess the country is in."
   PB_ENG_WUP_Mosley_Puppet:0 "A Useful Idiot"
   PB_ENG_WUP_Mosley_Puppet_desc:0 "Oswald Mosley is a firebrand of a speaker, rallying massive crowds at WUP rally's and from what the paper's bet the next WUP leader. However Mosley is only good at speaking and although his patriotic socialism is tolerated; his views are similar to that of the National People's Party. We'll keep him around but only while he's still useful to us and Pollitt."
   PB_ENG_WUP_Experiment_Communes:0 "Experiment with Communes"
   PB_ENG_WUP_Experiment_Communes_desc:0 "The British people are one of the most friendliest culture's to ever exist. To compliment this some of the brass in the party wishes to experiment with Communes in many parts of the country especially the less developed areas. The belief that Communes will be the way of the future to help the British people is currently being discussed at the top and it's now or never to test this theory out."  
   PB_ENG_WUP_Colonial_Education_Bureau:0 "Colonial Education Bureau"
+  PB_ENG_WUP_Colonial_Education_Bureau_desc:0 "Many subjects of the Empire remain uneducated and barbaric in culture. We shall teach them the true joy of education whilst also boosting state productivity with millions of newly educated souls lending their mind to help the innovation and creation of a new Britain and a new Empire to benefit one nation under the Crown."
   PB_ENG_WUP_Way_of_the_Future:0 "The Way of the Future"
+  PB_ENG_WUP_Way_of_the_Future_desc:0 "Mosley and his many friends in the WUP have been calling for new scientific progress in Britain to improve living standard's and to accelerate the growth of the country. We shall take this idea and mold it for the better of the country to bring Britain into the new age of man."
   PB_ENG_WUP_Pollitt_Betrayal:0 "And You, Mosley?"
   PB_ENG_WUP_Pollitt_Betrayal_desc:0 "It's just Good Business Clement." 
   PB_ENG_WUP_Purge_Mosley:0 "The Fall of the Red Right Hand"
@@ -118,6 +121,7 @@
   PB_ENG_WUP_Attlee_Consolidated:0 "The New Jerusalem"
   PB_ENG_WUP_Attlee_Consolidated_desc:0 "Under Attlee's leadership Britain is slowly transforming into the country promised at the end of the Great War. With another war brewing over the English Channel we must give the British people what they deserve through social education and healthcare. The British people deserve nothing less then a new home; a New Jerusalem given to Britain not by God's grace but by Clement's loving administration." 
   PB_ENG_WUP_Politt_Consolidated:0 "The Pollittburo"
+  PB_ENG_WUP_Politt_Consolidated_desc:0 "Don't worry comrades, we will break the capitalist system which oppresses the proletariat of Britannia. We shall break your chains and liberate you as long as you only listen, obey and heed the Command of Comrade Politt." 
 
   PB_ENG_NPP_Victory:0 "A National People's Victory"
   PB_ENG_Paralyze_Socialists:0 "Paralyze the Socialist Menace"
