a tad more turkey work

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -47,21 +47,21 @@
   TUR_cn_ADJ:0 "Turkish"
   TUR_an_ADJ:0 "Turkish"
   OTT_Loyalists_ni:0 "Ottoman Loyalists"
-  OTT_Loyalists_ni_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ni_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_ds:0 "Ottoman Loyalists"
-  OTT_Loyalists_ds_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ds_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_rc:0 "Ottoman Loyalists"
-  OTT_Loyalists_rc_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_rc_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_an:0 "Ottoman Loyalists"
-  OTT_Loyalists_an_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_an_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_cn:0 "Ottoman Loyalists"
-  OTT_Loyalists_cn_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_cn_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_lb:0 "Ottoman Loyalists"
-  OTT_Loyalists_lb_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_lb_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_ss:0 "Ottoman Loyalists"
-  OTT_Loyalists_ss_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_ss_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_jc:0 "Ottoman Loyalists"
-  OTT_Loyalists_jc_DEF:0 "Ottoman Loyalists"
+  OTT_Loyalists_jc_DEF:0 "The Ottoman Loyalists"
   OTT_Loyalists_ni_ADJ:0 "Turkish"
   OTT_Loyalists_rc_ADJ:0 "Turkish"
   OTT_Loyalists_lb_ADJ:0 "Turkish"
@@ -97,8 +97,15 @@
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
   PB_TUR_istanbul_riots:0 "The Istanbul Riots"
   PB_TUR_desperate_battle1:0 "Desperate Battle"
-
+  PB_TUR_desperate_battle2:0 "Desperate Battle"
+  PB_TUR_desperate_battle3:0 "Desperate Battle"
+  PB_TUR_desperate_battle4:0 "Desperate Battle"
+  PB_TUR_desperate_battle5:0 "Desperate Battle"
   PB_TUR_turkish_spring1:0 "The Turkish Spring"
+  PB_TUR_turkish_spring2:0 "The Turkish Spring"
+  PB_TUR_turkish_spring3:0 "The Turkish Spring"
+  PB_TUR_turkish_spring4:0 "The Turkish Spring"
+  PB_TUR_turkish_spring5:0 "The Turkish Spring"
 
   PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
   TUR_five_year_plan_preperation_idea:0 "Five Year Plan Prepeation"
