Bleeding South Stuff
Not done

--- a/localisation/PB_American_Commonwealth_l_english.yml
+++ b/localisation/PB_American_Commonwealth_l_english.yml
@@ -47,3 +47,45 @@ PB_AME_British_Imperial_Confederation_desc:0 "The [AME.GetName] is part of the B
 ##########################
 # PUPPET AUTONOMY
 ##########################
+
+##########################
+# BLEEDING SOUTH - Made In China ( Jk Made By G_O_D )
+##########################
+
+# Decisions
+PB_AME_The_Bleeding_South:0 "The Bleeding South"
+PB_AME_The_Bleeding_South_desc:0 "Racial tensions in the Southern states have always been uneasy. Creating not only a physcial divide between north and south but a political one as well with the North seen as a bastion of democracy, freedom, and progress. The South in their eyes as a rural backwater with rather outdated and barbaric traditions and customs. This rivalry has eventually reached its boiling point and there is now word of a southern uprising.\n\n§RWe have limited time to prepare for whats coming§!"
+AME_Test:0 "CLICK THIS TO ENABLE THE BLEEDING SOUTH"
+AME_Southern_Rebellion:0 "Southern Rebellion"
+AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
+AME_Civil_Unrest:0 "Civil Unrest"
+AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+
+# Country Flags
+Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
+Bleeding_South_Enabled:0 "The Bleeding South Is Active
+
+# Tooltips
+Bleeding_South1tooltip:0 "God Help Us All"
+Bleeding_South2tooltip:0 "§RAfter 15 days the United Commenwealth might just become a little less civilized§!"
+
+# Events
+Bleeding_South1title:0 "Violent Riots"
+Bleeding_South1desc:0 "The officer's pristine blue uniform aided little in the ensuing battle for the city roads, a war undeclared but very much active between the local authorities and white civilain population. Racial slurs rant rampant and armed showdowns occured in approximately five minute intervals. The south at this moment turned into a cesspool of degeneracy as frequent confrontations between other races, mainly between black and white, turned violent. Though as the night quietened so did the riots. But a new day would bring new "festivities"." 
+Bleeding_South1opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South2title:0 "Racial Street Brawl"
+Bleeding_South2desc:0 "A lone laundromat located in a predominantly white suburb laid victim to a bloody beating today. Local reports state that a young Africian-American entered the laundromat to do business when a gang of masked individuals, assumed to be stalking the boy, jumped him and draged him into the middle of the road, where they, Quote on quote. "Beat the fucking shit out of him". Said by locals present at the time. Apparently a few minutes later the beating turned into an ugly confrontation between the black and white local populations and a street brawl followed suite.\n\nThe young boy is now dead as a result of the beating." 
+Bleeding_South2opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South3title:0 "Talks Of Corruption"
+Bleeding_South3desc:0 "Rumours have spread that local officials are accepting large amounts of money to turn a blind eye in regards to southern mobilization and the raising of state funded militias. We have little power to intervene and doing so would likely on escalate the situation so as it stands the south only gets stronger. And more corrupt. " 
+Bleeding_South3opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South4title:0 "Weapons Depot Raided"
+Bleeding_South4desc:0 "" 
+Bleeding_South4opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South5title:0 "The Dixie Uprising"
+Bleeding_South5desc:0 "" 
+Bleeding_South5opta:0 "May The Greatest Americans Win"
