The South Continues To Bleed
- Added Scripted Peace Deals
- More Localisation
- New National Spirits
- New Events
- FSA OOB Is Done
(Besides their navy but fuck that)

--- a/localisation/PB_American_Commonwealth_l_english.yml
+++ b/localisation/PB_American_Commonwealth_l_english.yml
@@ -61,6 +61,10 @@ AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suit
 AME_Civil_Unrest:0 "Civil Unrest"
 AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
 
+# Ideas
+PB_AME_Dixie_Rebellion:0 "The Dixie Uprising"
+PB_FSA_No_Or_Never:0 "Now Or Never"
+
 # Country Flags
 Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
 Bleeding_South_Enabled:0 "The Bleeding South Is Active
@@ -68,6 +72,7 @@ Bleeding_South_Enabled:0 "The Bleeding South Is Active
 # Tooltips
 Bleeding_South1tooltip:0 "God Help Us All"
 Bleeding_South2tooltip:0 "§RAfter 15 days the United Commenwealth might just become a little less civilized§!"
+Bleeding_South3tooltip:0 "§YYou will tag switch to the FSA (Free States Alliance)§!"
 
 # Events
 Bleeding_South1title:0 "Violent Riots"
@@ -79,13 +84,27 @@ Bleeding_South2desc:0 "A lone laundromat located in a predominantly white suburb
 Bleeding_South2opta:0 "Can Everyone Just Calm Down?"
 
 Bleeding_South3title:0 "Talks Of Corruption"
-Bleeding_South3desc:0 "Rumours have spread that local officials are accepting large amounts of money to turn a blind eye in regards to southern mobilization and the raising of state funded militias. We have little power to intervene and doing so would likely on escalate the situation so as it stands the south only gets stronger. And more corrupt. " 
+Bleeding_South3desc:0 "Rumours have spread that local officials are accepting large amounts of money to turn a blind eye in regards to southern mobilization and the raising of state funded militias. We have little power to intervene and doing so would likely on escalate the situation so as it stands the south only gets stronger.\n\nAnd more corrupt. " 
 Bleeding_South3opta:0 "Can Everyone Just Calm Down?"
 
 Bleeding_South4title:0 "Weapons Depot Raided"
-Bleeding_South4desc:0 "" 
+Bleeding_South4desc:0 "A local garrison has just responded to the head of military affairs stating that a raid from a rag-tag militia group has just occured. Overwhelmed the garrison is said to have given up arms with little resistance. In fact it is said a large proportion of soliders defected to the militias cause.\n\nNow they grow stronger in size." 
 Bleeding_South4opta:0 "Can Everyone Just Calm Down?"
 
 Bleeding_South5title:0 "The Dixie Uprising"
-Bleeding_South5desc:0 "" 
+Bleeding_South5desc:0 "The garrison in Savannah stopped responding at 09:00 today. The most recent broadcast from yesterday spoke of rising unrest and the near collapse of the authoritie's hold on the city, stating that unless Northern aid arrives the garrison will likely defect to the SFA (Free States Alliance). The SFA remains the largest political body against northern rule in the south. Lead by southern landowners it is likely the worst has just begun and will only continue from this point on. Our military have already responded by mobilizing in preparation for the inevitable civil war as gunshots can already be heard in most major Southern cities. " 
 Bleeding_South5opta:0 "May The Greatest Americans Win"
+Bleeding_South5optb:0 "I Wish I Was In The Land Of Cotton"
+
+Bleeding_South6title:0 "Issues In The United Commonwealth"
+Bleeding_South6desc:0 "" 
+Bleeding_South6opta:0 "Muster An Expeditionary Force"
+
+Bleeding_South7title:0 "The South Is Tamed"
+Bleeding_South7desc:0 "" 
+Bleeding_South7opta:0 "Lets Hope That Never Happens Again"
+
+Bleeding_South8title:0 "The Sins Of Our Fathers"
+Bleeding_South8desc:0 "" 
+Bleeding_South8opta:0 "I Wish I Was Dixie"
+
