The South Stops Bleeding
Its done

--- a/localisation/PB_American_Commonwealth_l_english.yml
+++ b/localisation/PB_American_Commonwealth_l_english.yml
@@ -97,14 +97,14 @@ Bleeding_South5opta:0 "May The Greatest Americans Win"
 Bleeding_South5optb:0 "I Wish I Was In The Land Of Cotton"
 
 Bleeding_South6title:0 "Issues In The United Commonwealth"
-Bleeding_South6desc:0 "" 
+Bleeding_South6desc:0 "The United Commonwealth administration has just sent an urgent report based on a supposed Southern rebellion. While only received minutes ago our suspicions are being confirmed by the minute. The UC will have some explaining to do but for the time being we must aid them in their war against the Free States Alliance.\n\n It is a true shame that British boys will be sent to die in a foreign land." 
 Bleeding_South6opta:0 "Muster An Expeditionary Force"
 
 Bleeding_South7title:0 "The South Is Tamed"
-Bleeding_South7desc:0 "" 
+Bleeding_South7desc:0 "Once again our troops march across the southern lands in the name of freedom. Once again so many die to the hands of brothers. And once again we are divided. A recurring curse placed onto us by God it seems. One that will never end and is doomed to repeat itself until one brother can finally create a wound so damaging that healing will take a millennium.\n\nAnd even then I doubt we will be united. " 
 Bleeding_South7opta:0 "Lets Hope That Never Happens Again"
 
 Bleeding_South8title:0 "The Sins Of Our Fathers"
-Bleeding_South8desc:0 "" 
+Bleeding_South8desc:0 "We have failed to contain the Southern threat and as a result we are forced to reconcile with these backwards barbarians, traitors, and infidels. As it stands the scoreboard reads "One to One" but there is always time for another game.\n\nAnother victory." 
 Bleeding_South8opta:0 "I Wish I Was Dixie"
 
