GFX Push For The Bleeding South
and minor loc fixes

--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -272,16 +272,16 @@
   PBNews.68.d:0 ""
   PBNews.68.a:0 "Dear Lord"
 
-  PBNews.69.t:0 "The Dixie Rebellion"
+  PBNews.69.t:0 "THE DIXIE REBELLION!"
   PBNews.69.d:0 "Reports from the United Commonwealth speak of a 2nd Southern Uprising united against the administrations recent attempts to end racial segregation. Refering to themselves as the Free States Alliance they proclaim state independence from Philadelphia and less indirectly, from London. Britain's response has been similar to that of the UC. Hoping to end the rebellion and restore order to the nation. The whole world once again watches the Commonwealth tear itself apart, and, hopefully, put itself back together again. "
   PBNews.69.a:0 "America Remains Divided"
 
-  PBNews.70.t:0 "The South Falls"
-  PBNews.70.d:0 "As if history was doomed to repeat itself the south once again sleeps under a Northern government. The Free States while still continuing on in some small capacity in various holdouts stands on an official scale, defeated. Smoke can still be seen billowing out of most civilian buildings and marking a road bump in the UC's already complicated history. Foreign aid from Britain is already scheduled to arrive though many believe that though the war is over the memory much like before still lives on."
+  PBNews.70.t:0 "THE SOUTH FALLS!"
+  PBNews.70.d:0 "As if history was doomed to repeat itself the south once again sleeps under a Northern government. The Free States while still continuing on in some small capacity in various holdouts stands on an official scale, defeated. Smoke can still be seen billowing out of most civilian buildings, marking a road bump in the [AME.GetName]'s already complicated history. Foreign aid from Britain is already scheduled to arrive and though many believe that though the war is over the memory much like before still lives on."
   PBNews.70.a:0 "Order Has Been Restored"
 
-  PBNews.71.t:0 "The South Rises"
-  PBNews.71.d:0 "The Free States Alliance has risen against the United Commonwealth in their war for independence proclaiming total victory. Local citizens are parading the streets as the last of the UC forces withdraw from the FSA's designated borders and though the war was bloody and many lost loved ones it seems that a shared sigh of relief has birthed between the two American nations. Tensions are already mounting despite the end of the war as politicians on both sides call for a continuation of the war effort though each government is working hard to crack down on these thoughts."
+  PBNews.71.t:0 "THE SOUTH RISES!"
+  PBNews.71.d:0 "The Free States Alliance has risen against the United Commonwealth in their war for independence proclaiming total victory. Local citizens are parading the streets as the last of the [AME.GetName]'s forces withdraw from the [FSA.GetName]'s designated borders and though the war was bloody and many lost loved ones it seems that a shared sigh of relief has birthed between the two American nations. Tensions are already mounting despite the end of the war as politicians on both sides call for a continuation of the war effort though each government is working hard to crack down on these thoughts."
   PBNews.71.a:0 "A New Order On The Continent"
 
 
