The Dead March West Decisions

--- a/localisation/PB_SCA_l_english - Copy.yml
+++ b/localisation/PB_SCA_l_english - Copy.yml
@@ -10,17 +10,24 @@
   ##########################
 
   ##########################
-  # DECISIONS
+  # DECISIONS/MISSIONS
   ##########################
 
   PB_AME_DEBUG_SCA_TEST:0 "SCA TEST"
   AME_Test_SCA:0 "CLICK THIS TO PLAY AS THE SCA"
   
   ##########################
-  # TOOLTIPS
+  # TOOLTIPS/FLAGS
   ##########################
  
   SCA1tooltip:0 "§YYou will tag switch to the SCA§!"
+  SCA2tooltip:0 "§RWe Are All Thats Left§!"
+
+  All_Thats_Left:0 "The Last Wave Has Arrived"
+  PB_SCA_The_Final_Few:0 "The Dead March West"
+  PB_SCA_The_Final_Few_desc:0 "Our sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death.\n\n§RGod help us all.§!"
+  SCA_The_Final_Few:0 "The Final Few"
+  SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
 
   ##########################
   # EVENTS
@@ -30,3 +37,30 @@
   SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!." 
   SCA1opta:0 "Good, Fuck Of"
   SCA1optb:0 "Wait Let Me Come To"
+  SCA2title:0 "The First Wave"
+  SCA2desc:0 "The convoy reared to a closure, behind followed a huge line of hungry and tired peoples. The food situation had already begun deteriorating at this point and rationing had already taken effect. The streets were battered with sand and the definition of hell seemed all to fitting for the situation at hand. The local militias while not uttering a word of hesitance were all to knowledge about the current circumstances. They remained the only people able to still maintain a full belly, them and the various political leaders. Even the veterans were on the short end of the stick. The new Butlerites began being set new homes and rations and the core population looked towards them with distaste and concern. The worst had just begun. " 
+  SCA2opta:0 "Brace Yourselfs"
+  SCA3title:0 "The Second Wave"
+  SCA3desc:0 "As the second wave of Butlerites arrived the crowds that stood waiting at the capitals makeshift gates protested against the entry of more. "What about her, eh?" Shouted a citizen pointing at an old scrunched up figure. At closer inspection of the individual and old crested face revealed itself. "What will she provide now?" Added the engraged citizen as the crowd roared in unison. The old lady coerced with Butler showing to him a small timid boy under her arms. "Now listen hear dear, my son, this boy's father, gave everything to the cause. He died believing in you, in the revolution." Reaching out with her crooked finger she tapped Butlers heart. "If not me surely the boy?" She stood undisturbed at the possibilty of turning back, she knew her time was near but remained defiant at the suggestion of her grandson dying out in these wastes." 
+  SCA3opta:0 "We Must Look After The Loyal"
+  SCA3optb:0 "Only The Strong Are Allowed"
+  SCA4title:0 "The Third Wave"
+  SCA4desc:0 "" 
+  SCA4opta:0 ""
+  SCA4optb:0 ""
+  SCA4optc:0 ""
+  SCA5title:0 "The Fourth Wave"
+  SCA5desc:0 "" 
+  SCA5opta:0 ""
+  SCA5optb:0 ""
+  SCA5optc:0 ""  
+  SCA6title:0 "The Fifth Wave"
+  SCA6desc:0 "" 
+  SCA6opta:0 ""
+  SCA6optb:0 ""
+  SCA7title:0 "The Final Wave"
+  SCA7desc:0 "" 
+  SCA7opta:0 ""
+  SCA7optb:0 ""
+
+
