every day i get closer to finishing civil war code

--- a/localisation/PB_Revolutionary_Turkey_l_english.yml
+++ b/localisation/PB_Revolutionary_Turkey_l_english.yml
@@ -22,54 +22,54 @@
   ##########################
   # NAMES
   ##########################
- RTR_civilwar_ni:0 "Revolutionary State of Turkey"
- RTR_civilwar_ni_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_ds:0 "Revolutionary State of Turkey"
- RTR_civilwar_ds_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_rc:0 "Revolutionary State of Turkey"
- RTR_civilwar_rc_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_an:0 "Revolutionary State of Turkey"
- RTR_civilwar_an_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_cn:0 "Revolutionary State of Turkey"
- RTR_civilwar_cn_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_lb:0 "Revolutionary State of Turkey"
- RTR_civilwar_lb_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_ss:0 "Revolutionary State of Turkey"
- RTR_civilwar_ss_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_jc:0 "Revolutionary State of Turkey"
- RTR_civilwar_jc_DEF:0 "Revolutionary State of Turkey"
- RTR_civilwar_ni_ADJ:0 "Turkish"
- RTR_civilwar_rc_ADJ:0 "Turkish"
- RTR_civilwar_lb_ADJ:0 "Turkish"
- RTR_civilwar_ss_ADJ:0 "Turkish"
- RTR_civilwar_jc_ADJ:0 "Turkish"
- RTR_civilwar_ds_ADJ:0 "Turkish"
- RTR_civilwar_cn_ADJ:0 "Turkish"
- RTR_civilwar_an_ADJ:0 "Turkish"
- RTR_ni:0 "Turkish Union"
- RTR_ni_DEF:0 "The Pan-Turkish Union"
- RTR_ds:0 "Turkish State"
- RTR_ds_DEF:0 "The Turkish National State"
- RTR_rc:0 "Turkey"
- RTR_rc_DEF:0 "Turkey"
- RTR_an:0 "Turkey"
- RTR_an_DEF:0 "Turkey"
- RTR_cn:0 "Turkey"
- RTR_cn_DEF:0 "Turkey"
- RTR_lb:0 "Turkey"
- RTR_lb_DEF:0 "Turkey"
- RTR_ss:0 "People's Republic of Turkey"
- RTR_ss_DEF:0 "The People's Republic of Turkey"
- RTR_jc:0 "Turkish People’s State"
- RTR_jc_DEF:0 "The Turkish People’s State"
- RTR_ni_ADJ:0 "Turkish"
- RTR_rc_ADJ:0 "Turkish"
- RTR_lb_ADJ:0 "Turkish"
- RTR_ss_ADJ:0 "Turkish"
- RTR_jc_ADJ:0 "Turkish"
- RTR_ds_ADJ:0 "Turkish"
- RTR_cn_ADJ:0 "Turkish"
- RTR_an_ADJ:0 "Turkish"
+  RTR_civilwar_ni:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ni_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ds:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ds_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_rc:0 "Revolutionary State of Turkey"
+  RTR_civilwar_rc_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_an:0 "Revolutionary State of Turkey"
+  RTR_civilwar_an_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_cn:0 "Revolutionary State of Turkey"
+  RTR_civilwar_cn_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_lb:0 "Revolutionary State of Turkey"
+  RTR_civilwar_lb_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ss:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ss_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_jc:0 "Revolutionary State of Turkey"
+  RTR_civilwar_jc_DEF:0 "Revolutionary State of Turkey"
+  RTR_civilwar_ni_ADJ:0 "Turkish"
+  RTR_civilwar_rc_ADJ:0 "Turkish"
+  RTR_civilwar_lb_ADJ:0 "Turkish"
+  RTR_civilwar_ss_ADJ:0 "Turkish"
+  RTR_civilwar_jc_ADJ:0 "Turkish"
+  RTR_civilwar_ds_ADJ:0 "Turkish"
+  RTR_civilwar_cn_ADJ:0 "Turkish"
+  RTR_civilwar_an_ADJ:0 "Turkish"
+  RTR_ni:0 "Turkey"
+  RTR_ni_DEF:0 "The Turkish Republic"
+  RTR_ds:0 "Turkey"
+  RTR_ds_DEF:0 "Army State of Turkey"
+  RTR_rc:0 "Turkey"
+  RTR_rc_DEF:0 "The Turkish Republic"
+  RTR_an:0 "Turkey"
+  RTR_an_DEF:0 "The Turkish Republic"
+  RTR_cn:0 "Turkey"
+  RTR_cn_DEF:0 "The Turkish Republic"
+  RTR_lb:0 "Turkey"
+  RTR_lb_DEF:0 "The Turkish Republic"
+  RTR_ss:0 "Turkey"
+  RTR_ss_DEF:0 "The People's Republic of Turkey"
+  RTR_jc:0 "Turkish Union"
+  RTR_jc_DEF:0 "The Turkish People’s Union"
+  RTR_ni_ADJ:0 "Turkish"
+  RTR_rc_ADJ:0 "Turkish"
+  RTR_lb_ADJ:0 "Turkish"
+  RTR_ss_ADJ:0 "Turkish"
+  RTR_jc_ADJ:0 "Turkish"
+  RTR_ds_ADJ:0 "Turkish"
+  RTR_cn_ADJ:0 "Turkish"
+  RTR_an_ADJ:0 "Turkish"
 
   ##########################
   # MINISTERS
@@ -78,6 +78,8 @@
   ##########################
   # IDEAS
   ##########################
+  RTR_united_minds_hearts_souls:0 "United in Hearts, Minds and Souls"
+  RTR_peoples_militia1:0 "The People's Militia"
 
   ##########################
   # FOCUSES
