Minor SCA stuff

--- a/localisation/PB_SCA_l_english - Copy.yml
+++ b/localisation/PB_SCA_l_english - Copy.yml
@@ -1,5 +1,11 @@
 ﻿l_english:
 
+
+  ##########################
+  # LEADERS
+  ##########################
+  POLITICS_Smedley_Butler_Exile_DESC:0 "§YBorn:§! 30/7/1881\n\n§YSmedley Butler§! is failed man with a failed dream. With the defeat of the American-Jacobin Revolution Butler and his disciples marched west into untamed America in hopes of a new life. The result was the death of many and those who were the "lucky" bunch soon found out why the settlers of the old America failed in their ambitions. Whilst their greatest foe is the Commonwealth, second ranks nature and her desire to elevate the human struggle to the rest of the animal kingdom.\n\nNow begins the greatest test of all, to see what it truely takes to break a man, and an idea.\n\n§RSic semper tyrannis§! is a Latin phrase meaning "thus always to tyrants". It suggests that bad outcomes should or eventually will befall tyrants, and that shall be out motto."
+
   ##########################
   # MINISTERS
   ##########################
@@ -15,7 +21,18 @@
 
   PB_AME_DEBUG_SCA_TEST:0 "SCA TEST"
   AME_Test_SCA:0 "CLICK THIS TO PLAY AS THE SCA"
-  
+
+  PB_SCA_The_Final_Few:0 "The Dead March West"
+  PB_SCA_The_Final_Few_desc:0 "Our sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death.\n\n§RGod help us all.§!"
+  SCA_The_Final_Few:0 "The Final Few"
+  SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
+  PB_SCA_The_Northern_Menace:0 "The Northern Menace"
+  PB_SCA_The_Northern_Menace_desc:0 "The Native raids we are experiencing cannot go unpunished. Innocents die left and right whilst our stockpiles are left barren with food and materials. We must mount an offensive to rid the northern tribes of their rule else we face extinction. Thise will be no easy feat and all will have to do their part for the betterment of the revolution."
+  SCA_The_Crow_Offensive:0 "The Crow Offensive"
+  SCA_The_Crow_Offensive_desc:0 "The first struggle that will test the foundations of our nation and the very bedrock we lay ourselves upon comes once again in the form of war. We are no tyrants, imperialists, or mad men but push come to shove and we will seek revenge. For that is the natural order of life."
+
+
+
   ##########################
   # TOOLTIPS/FLAGS
   ##########################
@@ -24,10 +41,6 @@
   SCA2tooltip:0 "§RWe Are All Thats Left§!"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
-  PB_SCA_The_Final_Few:0 "The Dead March West"
-  PB_SCA_The_Final_Few_desc:0 "Our sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death.\n\n§RGod help us all.§!"
-  SCA_The_Final_Few:0 "The Final Few"
-  SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
 
   ##########################
   # EVENTS
@@ -62,5 +75,8 @@
   SCA7desc:0 "" 
   SCA7opta:0 ""
   SCA7optb:0 ""
+  SCA8title:0 "The Crow Offensive"
+  SCA8desc:0 "" 
+  SCA8opta:0 ""
 
 
