--- a/localisation/PB_SCA_l_english - Copy.yml
+++ b/localisation/PB_SCA_l_english - Copy.yml
@@ -42,12 +42,51 @@
   SCA_Elite_Pigs:0 "Elite Pigs"
 
   ##########################
+  # FOCUS
+  ##########################
+  
+  SCA_Heirs_Of_The_Revolution:0 "Heirs Of The §RRevolution§!"
+  SCA_Heirs_Of_The_Revolution_desc:0 ""
+  
+  SCA_The_Young_Old_And_Bold:0 "The Young, Old, And Bold"
+  SCA_The_Young_Old_And_Bold_desc:0 ""
+
+  SCA_The_Food_Issue:0 "The Food Issue"
+  SCA_The_Food_Issue_desc:0 ""
+
+  SCA_The_Eternal_Struggle:0 "The Eternal Stuggle"
+  SCA_The_Eternal_Struggle_desc:0 ""
+
+  SCA_The_India_Menace:0 "The Indian Menace"
+  SCA_The_India_Menace_desc:0 ""
+
+  SCA_On_The_Offensive:0 "On The Offensive"
+  SCA_On_The_Offensive_desc:0 ""
+
+  SCA_Steal_Their_Horses:0 "Steal Their Horses"
+  SCA_Steal_Their_Horses_desc:0 ""
+ 
+  SCA_Further_Mobilization:0 "Further Mobilization"
+  SCA_Further_Mobilization_desc:0 ""
+
+  SCA_On_The_Defensive:0 "On The Defensive"
+  SCA_On_The_Defensive_desc:0 ""
+  
+  SCA_Survival_Manuals:0 "Survival Manuals"
+  SCA_Survival_Manuals_desc:0 ""
+  
+  SCA_Steal_Their_Guns:0 "Steal Their Guns"
+  SCA_Steal_Their_Guns_desc:0 ""
+
+  ##########################
   # TOOLTIPS/FLAGS
   ##########################
  
   SCA1tooltip:0 "§YYou will tag switch to the SCA§!"
   SCA2tooltip:0 "§RWe Are All Thats Left§!"
   SCA3tooltip:0 "§YOne Militia Will Be Raised§!"
+  SCA4tooltip:0 "§RWe Must Protect Our Freedoms!§!"
+  SCA5tooltip:0 "§YWith the stolen horses out our disposal we will mobolize a small cavalry brigade.§!"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
