--- a/localisation/PB_SCA_l_english - Copy.yml
+++ b/localisation/PB_SCA_l_english - Copy.yml
@@ -33,6 +33,10 @@
   SCA_The_Crow_Offensive_desc:0 "The first struggle that will test the foundations of our nation and the very bedrock we lay ourselves upon comes once again in the form of war. We are no tyrants, imperialists, or mad men but push come to shove and we will seek revenge. For that is the natural order of life."
   SCA_Emergency_Draft:0 "Emergency Draft"
   SCA_Emergency_Draft_desc:0 "With the preparations set for war we must mobolize any able bodied men and women."
+  PB_SCA_The_Northern_Plains:0 "The Northern Plains"
+  SCA_Core_Crow:0 "Core Crow"
+  SCA_Core_Blackfoot:0 "Core Blackfoot"
+  SCA_Core_Assinibone:0 "Core Assinibone"
 
   ##########################
   # OPINION MODIFIERS
@@ -78,6 +82,36 @@
   SCA_Steal_Their_Guns:0 "Steal Their Guns"
   SCA_Steal_Their_Guns_desc:0 ""
 
+  SCA_Blackfoot_Burns:0 "Blackfoot Burns"
+  SCA_Blackfoot_Burns_desc:0 ""
+  
+  SCA_What_We_Have:0 "What We Have"
+  SCA_What_We_Have_desc:0 ""
+
+  SCA_What_We_Need:0 "What We Need"
+  SCA_What_We_Need_desc:0 ""
+
+  SCA_What_We_Want:0 "What We Want"
+  SCA_What_We_Want_desc:0 ""
+  
+  SCA_The_First_Communes:0 "The First Communes"
+  SCA_The_First_Communes_desc:0 ""
+
+  SCA_Sic_Semper_Tyrannis:0 "§RSic Semper Tyrannis§!" 
+  SCA_Sic_Semper_Tyrannis_desc:0 ""
+
+  SCA_Sawdust_And_Bread:0 "Sawdust And Bread"
+  SCA_Sawdust_And_Bread_desc:0 ""
+ 
+  SCA_New_Networks:0 "New Networks"
+  SCA_New_Networks_desc:0 ""
+
+  SCA_Farm_Expansions:0 "Farm Expansions"
+  SCA_Farm_Expansions_desc:0 ""
+  
+  SCA_The_First_Seeds:0 "The First Seeds"
+  SCA_The_First_Seeds_desc:0 ""
+  
   ##########################
   # TOOLTIPS/FLAGS
   ##########################
@@ -96,7 +130,7 @@
   ##########################
 
   SCA1title:0 "The Dead March West"
-  SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!." 
+  SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!" 
   SCA1opta:0 "Good, Fuck Of"
   SCA1optb:0 "Wait Let Me Come To"
   SCA2title:0 "The First Wave"
