--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -284,6 +284,10 @@
   PBNews.71.d:0 "The Free States Alliance has risen against the United Commonwealth in their war for independence proclaiming total victory. Local citizens are parading the streets as the last of the [AME.GetName]'s forces withdraw from the [FSA.GetName]'s designated borders and though the war was bloody and many lost loved ones it seems that a shared sigh of relief has birthed between the two American nations. Tensions are already mounting despite the end of the war as politicians on both sides call for a continuation of the war effort though each government is working hard to crack down on these thoughts."
   PBNews.71.a:0 "A New Order On The Continent"
 
+  PBNews.72.t:0 "THE TURKISH CIVIL WAR BEGINS!"
+  PBNews.72.d:0 ""
+  PBNews.72.a:0 "May The Best Man Win"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
