--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -155,7 +155,7 @@
   turkey_inital.3.t:0 "Observing the Torun"
   turkey_inital.3.a:0 "Peace at Home, Peace in the World."
   turkey_inital.4.t:0 "The Protégé"
-  turkey_inital.4.a:0 "'Turkey will live on even without you, Teacher.'"
+  turkey_inital.4.a:0 "Turkey will never falter again."
   turkey_inital.5.t:0 "The Doctrinal Debate"
   turkey_inital.5.a:0 "Throwing Shells will keep our men safe."
   turkey_inital.5.b:0 "Only a Grand Statergy will keep our men safe."
@@ -165,17 +165,38 @@
   turkey_inital.6.a:0 "Soon all will live in utopia."
   turkey_inital.7.t:0 "The Istanbul Situation"
   turkey_inital.7.a:0 "Call in the Military."
-  turkey_inital.7.b:0 "Prepare a peaceful solution."
+  turkey_inital.7.b:0 "Prepare a peaceful resolution."
   turkey_inital.8.t:0 "Meeting With the Rioters"
   turkey_inital.8.a:0 "Perhaps there will be peace?"
   turkey_flavour.1000.t:0 "DIRTY CHEATER"
-  turkey_flavour.1000.a:0 "GO PLAY THE GAME NORMALY, or don't tbh i don't really like HOI4 gameplay that much, but really it is up to you I'm not some up my own ass game dev who demands you to play the game 'the intend way'"
+  turkey_flavour.1000.a:0 "GO PLAY THE GAME NORMALY, or don't tbh i don't really like HOI4 gameplay that much, but really it is up to you I'm not some up my own ass game dev who demands you to play the game 'the intended way'"
   turkey.1.t:0 "The Death of Izzet Pasha"
   turkey.1.d:0 "Ahmed Izzet Pasha, the dictator of the Ottoman Empire and head of the military junta since 1925, was found dead in his office this morning. Pasha's legacy is a controversial one, with his choice to overthrow the civilian government eight years ago has been both supported and criticized. The Pasha Junta's decision to seek terms with the United Arab Emirates marked the official end of the Ottoman Empire as the hegemony of the Middle East. For many, the collapse of Ottoman rule has been a near constant downward spiral only exacerbated by the end of what tepid democracy the Empire had.\n\nWith Pasha's death, the last tenuous thread holding the Empire together has been cut. What would be an unremarkable state funeral under normal cirucumstances has become a moment of genuine grief and uncertainty amongst the populace. Reports have already begun to reach the Sublime Porte of Jacobin riots on the coast, while Armenian and Kurdish partisans have begun organizing the inevitable breakdown of civil authority. Already Fevzi Cakmak has made his move and has claimed his teachers's place for himself, whether he is able to sufficently combat this growing crisis is unknown to all."
   turkey.1.a:0 "The Empire trembles..."
   turkey.2.t:0 "The Red Menace"
-  turkey.2.d:0 ""
   turkey.2.a:0 "Where is the army!?"
+  turkey.3.t:0 "Fleeing East"
+  turkey.3.a:0 "We shall return soon enough."
+  turkey.4.t:0 "Silence from Ankara"
+  turkey.4.a:0 "Another problem."
+  turkey.5.t:0 "The Nationalist Meance"
+  turkey.5.a:0 "They are coming."
+  turkey.6.t:0 "Remnant Forces sieze West Thrace"
+  turkey.6.d:0 "As the Empire continues into a death spiral, there are some positive developments. In the Thrace territories, loyalists to the Sultan were able to rally the garrison to prevent a nationalist takeover. Though loyalists remain in control of the region, their disconnect from our forces prompted the formation of a provisional autonomous government. Ali Şükrü Paşa, elected by emergency ballot, declared the formation of the \"Neutral Zone of West Thrace.\"\n\nPaşa has affirmed his loyalty to the Ottoman Sultan, stating that once the rebellion has been defeated, he will dissolve the provisional government and return to the Empire. In the meantime, it's necessary that we declare our intention to protect these lands from outside forces. Given that both Greece and Bulgaria have ambitions there, a declaration that any intervention will bring war should prevent any opportunism for the time being."
+  turkey.6.a:0 "West Thrace will be safe."
+  turkey.6.b:0 "[WTA.GetFlag] §YTo the neutral zone!§!"
+  turkey.7.t:0 "The Separatists"
+  turkey.7.a:0 "Your freedom will be temporary."
+  turkey.8.t:0 "Kardeşler Savaşı"
+  turkey.8.d:0 "who could have though the collapse of order from the death of Izzet Pasah could have been so disastrous. With nationalist and Ottoman forces clashing over major cities, chaos erupted in the West as Jacobin and Bakuninist militias began mobilizing against both forces. Across the Empire, political violence has overthrown whatever semblance of calm that once existed. There can be no doubt at this point that Turkey is in the midst of full blown rebellion.\n\nThe fighting has come to be called Kardeşler Savaşı, or the Brother War, and it would be difficult to find a more apt name. As last remnants of the Ottoman Empire burn to the ground, the loyalists have been forced into the Northernmost provinces bordering the Black Sea. In the East, Armenian and Kurdish partisans are taking up positions to defend their homes in the coming conflict. In the West, Greece eyes the now vulnerable coast, their dreams of Megali tantalizingly close. Only incredible violence will determine the winner of this conflict, and whomever remains will be the kings of little more than corpses and ash."
+  turkey.8.a:0 "We shall endure!"
+  turkey.8.b:0 "It is time we take back out destiny!"
+  turkey.8.c:0 "For the people!"
+  turkey.9.a:0 "The Brothers War Begins"
+  turkey.9.a:0 "To War!"
+
+  
+  
 
   ##########################
   # TOOLTIPS
