even more turkey peace deals edition

--- a/localisation/PB_nationalist_Turkey_l_english.yml
+++ b/localisation/PB_nationalist_Turkey_l_english.yml
@@ -78,6 +78,8 @@
   ##########################
   # IDEAS
   ##########################
+  NTR_skilled_high_command:0 "Skilled High Command"
+  RTR_turkish_only:0 "Turkish Only Forces"
 
   ##########################
   # FOCUSES
