--- a/localisation/PB_peace_popup_l_english.yml
+++ b/localisation/PB_peace_popup_l_english.yml
@@ -45,7 +45,9 @@ PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_VICTORY:0 "The §YMalayisan Insurgency§! h
  PB_PEACE_POPUP_FLAVOR_CHI:0 "History doesn't repeat itself, but it often rhymes"
  PB_PEACE_POPUP_FLAVOR_ROC:0 "Millions of but one heart march on"
  PB_PEACE_POPUP_FLAVOR_JAP:0 "The war has developed not necessarily to Japan's advantage"
-
+ PB_PEACE_POPUP_FLAVOR_TUR:0 "The Sick Man took one last breath and fell silent"
+ PB_PEACE_POPUP_FLAVOR_RTR:0 "Their dreams gone, the people silenced their minds"
+ PB_PEACE_POPUP_FLAVOR_NTR:0 "Inspired by hate, their maddness collapsed"
  PB_PEACE_POPUP_FLAVOR_Malaya_Loss:0 "Negaraku, Tanah tumpahnya darahku"
  PB_PEACE_POPUP_FLAVOR_Malaya_Victory:0 "Negaraku Sehati Sejiwa"
 
