--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -86,7 +86,7 @@
 
   PBNews.22.t:0 "ISTANBUL GOVERNMENT DECLARES VICTORY"
   PBNews.22.d:0 "Despite the seemingly impossible odds, the Ottoman Loyalists have achieved victory in the Turkish Civil War. Loyalist forces secured the former provisional capital of the Nationalist forces, following which much of the Nationalist leadership fled abroad. Military divisions move throughout the Western provinces, eliminating the last remaining holdouts of the Nationalists.\n\nAs the fires wither away, the Sick Man of Europe remains, however battered and mutilated he may be. The Sultan and his cabinet must now turn their attentions to rebuilding their decimated nation."
-  PBNews.22.a:0 "Misfortune is the fate of the enemy."
+  PBNews.22.a:0 "The Sick man continues on."
 
   PBNews.23.t:0 "BALKAN WARS END, REDS IN BELGRADE"
   PBNews.23.d:0 "When war first broke out in the Balkans again, many believed that it would be a swift campaign by the upstart Serbians to topple the Hungarian Republic. Now, as Hungarian troops march through the streets of Belgrade, it is clear that a new order has been established.\n\nThe Hungarian People's Republic and the Budapest Entente have secured victory against Serbia and Romania, and with this the last vestige of Vienna's legacy in the Balkans falls. The region will be remade in Budapest's image, whether it likes it or not."
@@ -286,7 +286,11 @@
 
   PBNews.72.t:0 "THE TURKISH CIVIL WAR BEGINS!"
   PBNews.72.d:0 ""
-  PBNews.72.a:0 "May The Best Man Win"
+  PBNews.72.a:0 "May The Best Man Win."
+
+  PBNews.73.t:0 "THE TURK JACOBEANS CLAIM VICTORY!"
+  PBNews.73.d:0 ""
+  PBNews.73.a:0 "The People take their fate with firm hands."
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
